[FOLLOWUP][BUGFIX] EXT:recycler Collapsed record occupies no space
This patch fix the wrong generated CSS in last patch.

Resolves: #69987
Releases: master
Reviewed-on: http://review.typo3.org/43517
Tested-by: Michael Oehlhof <typo3@oehlhof.de>
Tested-by: Wouter Wolters <typo3@wouterwolters.nl>

--- a/typo3/sysext/t3skin/Resources/Public/Css/backend.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/backend.css
@@ -12767,8 +12767,11 @@ iframe {
 .query-builder .indent {
   padding-left: 20px;
 }
-tr.collapse {
+.tx_recycler_recycler tr.collapse {
   display: none;
+}
+.tx_recycler_recycler tr.collapse.in {
+  display: table-row;
 }
 .tx_scheduler_mod1 .table td {
   vertical-align: top;
